--- a/crds/gate.xdmybl.io_v1_crds.yaml
+++ b/crds/gate.xdmybl.io_v1_crds.yaml
@@ -467,7 +467,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    crd.solo.io/specHash: 5dc5e5d099feee1e
+    crd.solo.io/specHash: 421960c517a10129
   labels:
     app: engine-gate
     app.kubernetes.io/name: engine-gate
@@ -530,13 +530,9 @@ spec:
                     format: int64
                     type: integer
                   maxRequests:
-                    description: 访问该集群的最大并发请求数，默认值-1(2^32-1)。
                     format: int64
                     type: integer
                   maxRequestsPerConnection:
-                    description: |-
-                      限制每个连接可以承载的连接个数，0表示不受限制，1表示一个连接服务一个请求后就被关闭，
-                      也就是禁用连接复用。默认值为0。
                     maximum: 4294967295
                     minimum: 0
                     type: integer
@@ -558,20 +554,59 @@ spec:
                       type: integer
                   type: object
                 type: array
-              healthCheckRef:
+              hcHealthyThreshold:
+                description: hc 健康阈值
+                maximum: 4294967295
+                minimum: 0
+                type: integer
+              hcInterval:
+                description: health check interval
+                maximum: 4294967295
+                minimum: 0
+                type: integer
+              hcSpecifier:
                 properties:
-                  group:
-                    type: string
-                  kind:
-                    type: string
-                  name:
-                    type: string
-                  namespace:
-                    description: Defaults to `default`
-                    type: string
-                  version:
+                  httpHealthCheck:
+                    properties:
+                      ClientType:
+                        type: string
+                      expectedStatuses:
+                        items:
+                          maximum: 4294967295
+                          minimum: 0
+                          type: integer
+                        type: array
+                      host:
+                        type: string
+                      method:
+                        type: string
+                      path:
+                        type: string
+                    type: object
+                  tcpHealthCheck:
+                    properties:
+                      receivePayload:
+                        items:
+                          type: string
+                        type: array
+                      sendPayload:
+                        type: string
+                    type: object
+                  type:
+                    enum:
+                    - UNKNOWN
+                    - TCP
+                    - HTTP
                     type: string
                 type: object
+              hcTimeout:
+                maximum: 4294967295
+                minimum: 0
+                type: integer
+              hcUnhealthyThreshold:
+                maximum: 4294967295
+                minimum: 0
+                type: integer
               lbAlg:
                 enum:
                 - ROUND_ROBIN
