--- a/crds/gate.xdmybl.io_v1_crds.yaml
+++ b/crds/gate.xdmybl.io_v1_crds.yaml
@@ -810,7 +810,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    crd.solo.io/specHash: 73d1697b400d480a
+    crd.solo.io/specHash: d3a02e3a502ce57d
   labels:
     app: engine-gate
     app.kubernetes.io/name: engine-gate
@@ -963,6 +963,10 @@ spec:
                       vhostLs:
                         items:
                           properties:
+                            domains:
+                              items:
+                                type: string
+                              type: array
                             routeLs:
                               items:
                                 oneOf:
@@ -1010,6 +1014,79 @@ spec:
                                           type: object
                                         type: array
                                     type: object
+                                  headerManipulation:
+                                    properties:
+                                      requestHeadersToAdd:
+                                        description: |-
+                                          Specifies a list of HTTP headers that should be added to each request
+                                          handled by this route or virtual host. For more information, including
+                                          details on header value syntax, see the
+                                          [Envoy documentation](https://www.envoyproxy.io/docs/envoy/latest/configuration/http_conn_man/headers#config-http-conn-man-headers-custom-request-headers) .
+                                        items:
+                                          properties:
+                                            append:
+                                              description: |-
+                                                Should the value be appended? If true (default), the value is appended to
+                                                existing values.
+                                              type: boolean
+                                            header:
+                                              description: Header name/value pair
+                                                that this option applies to.
+                                              properties:
+                                                key:
+                                                  description: Header name.
+                                                  type: string
+                                                value:
+                                                  description: Header value.
+                                                  type: string
+                                              type: object
+                                          type: object
+                                        type: array
+                                      requestHeadersToRemove:
+                                        description: |-
+                                          Specifies a list of HTTP headers that should be removed from each request
+                                          handled by this route or virtual host.
+                                        items:
+                                          type: string
+                                        type: array
+                                      responseHeadersToAdd:
+                                        description: |-
+                                          Specifies a list of HTTP headers that should be added to each response
+                                          handled by this route or host. For more information, including
+                                          details on header value syntax, see the
+                                          [Envoy documentation](https://www.envoyproxy.io/docs/envoy/latest/configuration/http_conn_man/headers#config-http-conn-man-headers-custom-request-headers) .
+                                        items:
+                                          properties:
+                                            append:
+                                              description: |-
+                                                Should the value be appended? If true (default), the value is appended to
+                                                existing values.
+                                              type: boolean
+                                            header:
+                                              description: Header name/value pair
+                                                that this option applies to.
+                                              properties:
+                                                key:
+                                                  description: Header name.
+                                                  type: string
+                                                value:
+                                                  description: Header value.
+                                                  type: string
+                                              type: object
+                                          type: object
+                                        type: array
+                                      responseHeadersToRemove:
+                                        description: |-
+                                          Specifies a list of HTTP headers that should be removed from each response
+                                          handled by this route or virtual host.
+                                        items:
+                                          type: string
+                                        type: array
+                                    type: object
+                                  id:
+                                    maximum: 4294967295
+                                    minimum: 0
+                                    type: integer
                                   match:
                                     properties:
                                       headers:
@@ -1036,6 +1113,8 @@ spec:
                                       regex:
                                         type: string
                                     type: object
+                                  name:
+                                    type: string
                                   redirectAction:
                                     properties:
                                       hostRedirect:
