--- a/crds/gate.xdmybl.io_v1_crds.yaml
+++ b/crds/gate.xdmybl.io_v1_crds.yaml
@@ -810,7 +810,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    crd.solo.io/specHash: d3a02e3a502ce57d
+    crd.solo.io/specHash: 85fe243afeeeb49a
   labels:
     app: engine-gate
     app.kubernetes.io/name: engine-gate
@@ -1119,6 +1119,8 @@ spec:
                                     properties:
                                       hostRedirect:
                                         type: string
+                                      httpsRedirect:
+                                        type: boolean
                                       portRedirect:
                                         maximum: 4294967295
                                         minimum: 0
@@ -1127,8 +1129,6 @@ spec:
                                         maximum: 4294967295
                                         minimum: 0
                                         type: integer
-                                      schemeRewriteSpecifier:
-                                        type: boolean
                                       stripQuery:
                                         type: boolean
                                     type: object
