--- a/crds/gate.xdmybl.io_v1_crds.yaml
+++ b/crds/gate.xdmybl.io_v1_crds.yaml
@@ -810,7 +810,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    crd.solo.io/specHash: 85fe243afeeeb49a
+    crd.solo.io/specHash: 39a50dcace003a2b
   labels:
     app: engine-gate
     app.kubernetes.io/name: engine-gate
@@ -1117,6 +1117,8 @@ spec:
                                     type: string
                                   redirectAction:
                                     properties:
+                                      exact:
+                                        type: string
                                       hostRedirect:
                                         type: string
                                       httpsRedirect:
@@ -1125,6 +1127,16 @@ spec:
                                         maximum: 4294967295
                                         minimum: 0
                                         type: integer
+                                      prefix:
+                                        type: string
+                                      regex:
+                                        properties:
+                                          pattern:
+                                            description: GR2正则表达式里模式
+                                            type: string
+                                          substitution:
+                                            type: string
+                                        type: object
                                       responseCode:
                                         maximum: 4294967295
                                         minimum: 0
